--- a/app/views/closet/index.html.erb
+++ b/app/views/closet/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Closet#index</h1>
 <p>Find me in app/views/closet/index.html.erb</p>
+<%= month_calendar do |date| %>
+    <%= date %>
+<% end %>
