modal saved_record 부분, submit 버튼 정리

--- a/app/assets/stylesheets/closet.scss
+++ b/app/assets/stylesheets/closet.scss
@@ -76,3 +76,14 @@ section.calendar_page.container{
   font-size: 0.8rem;
   display: flex;
 }
+
+// modal data view 장면 관련
+.mo_span1{
+  padding-right: 0px;
+}
+.mo_span2{
+  padding: 0px;
+}
+.mo_span3{
+  padding-left: 0px;
+}
