--- a/app/assets/stylesheets/closet.scss
+++ b/app/assets/stylesheets/closet.scss
@@ -87,3 +87,17 @@ section.calendar_page.container{
 .mo_span3{
   padding-left: 0px;
 }
+
+.modal_image1{
+  height: 20vh;
+  padding-right: 5px;
+}
+.modal_image2{
+  height: 20vh;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.modal_image0{
+  height: 20vh;
+  padding-left: 5px;
+}
