--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -2,8 +2,6 @@
 
 <!--  데이터 존재 시에 보여주기 -->
 
-
-<!--  입력 form -->
 <%= form_for(Record.new, url: enrollment_path, html: {method: :post}) do |record| %>
   <%= content_tag(:div, class: "modal fade", role: "dialog", id: "#{@date_id}", tabindex: "-1", :aria =>{:labelledby=>"exampleModalLabel",:hidden=>"true"}) do %>
     <%= content_tag(:div, class: "modal-dialog", role: "document") do %>
@@ -27,35 +25,56 @@
         <%= record.hidden_field :date_data, name: :date_data, value: @day %>
         <%= record.hidden_field :date_id, name: :date_id, value: @date_id %>
         <%= content_tag(:div, class:"modal-body") do %>
-            <%= content_tag(:div, class:"form-group row") do %>
-              <%= content_tag(:label, for: "messgae-text", class:"col-form-label col-12") do %>
-                saved records
+          
+          <!-- record 메모 내용 불러오기 -->
+          <%= content_tag(:div, class:"form-group row") do %>
+            <%= content_tag(:label, for: "messgae-text", class:"col-form-label col-12") do %>
+              saved records
+            <% end %>
+            <% @cal_record2 =  @cal_record.where(date_id: @date_id)%>
+            <% @cal_record2.each do |data| %>
+              <%= content_tag(:span, class:"col-7 mo_span1") do %>
+                <%= data.memo %> 
               <% end %>
-              <% @cal_record2 =  @cal_record.where(date_id: @date_id)%>
-              <% @cal_record2.each do |data| %>
-                <%= content_tag(:span, class:"col-7 mo_span1") do %>
-                  <%= data.memo %> 
-                <% end %>
-                <%= content_tag(:span, class:"col-3 mo_span2") do %>
-                  <%= data.updated_at.strftime("%m/%d %H:%M") %>
-                <% end %>
-                <%= content_tag(:span, class:"col-1 mo_span2") do %>
-                  E             
-                <% end %>
-                <%= content_tag(:span, class:"col-1 mo_span3") do %>
-                  D
-                <% end %>
+              <%= content_tag(:span, class:"col-3 mo_span2") do %>
+                <%= data.updated_at.strftime("%m/%d %H:%M") %>
+              <% end %>
+              
+              <!--수정/삭제 버튼 예정-->
+              <%= content_tag(:span, class:"col-1 mo_span2") do %>
+                E             
+              <% end %>
+              <%= content_tag(:span, class:"col-1 mo_span3") do %>
+                D
               <% end %>
             <% end %>
-            <%= content_tag(:div, class:"form-group") do %>
-              <%= content_tag(:label, for: "recipient-name", class:"col-form-label") do %>
-                memo
-              <% end %>
-              <%= content_tag :textarea, name: "memo", class: "form-control", id:"recipient-name"  do %>
-              <% end %>
+          <% end %>
+          
+          <!--  입력 form -->
+          <%= content_tag(:div, class:"form-group") do %>
+            <%= content_tag(:label, for: "recipient-name", class:"col-form-label") do %>
+              memo
             <% end %>
+            <%= content_tag :textarea, name: "memo", class: "form-control", id:"recipient-name"  do %>
+            <% end %>
+          <% end %>
+          
+          <!--모달창에 업로드된 이미지 불러오기 -->
+          <%= content_tag(:div, class:"form-group row") do %>
+            <%= content_tag(:label, for: "recipient-name", class:"col-form-label col-12") do %>
+              photos
+            <% end %>
+              <% modal_image_count = 1 %>
+            <% @cal_record2.each do |data| %>
+              <% modal_image_css = modal_image_count % 3 %>
+              <%= image_tag("#{data.image_url}", class: "col-4 modal_image#{modal_image_css}", alt: "index test") %>
+              <% modal_image_count = modal_image_count + 1 %>
+            <% end %>
+          <% end %>
         <% end %>
         <%= content_tag(:div, class:"modal-footer") do %>
+          
+          <!-- button 모음 -->
           <%= button_tag(type: 'button', class: "btn btn-secondary", :data => {dismiss: "modal"}) do %>
             ClOSE
           <% end %>
