--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -31,8 +31,8 @@
             <%= content_tag(:label, for: "messgae-text", class:"col-form-label col-12") do %>
               saved records
             <% end %>
-            <% @cal_record2 =  @cal_record.where(date_id: @date_id)%>
-            <% @cal_record2.each do |data| %>
+            <% @user_record_data =  @user_record.where(date_id: @date_id)%>
+            <% @user_record_data.each do |data| %>
               <%= content_tag(:span, class:"col-7 mo_span1") do %>
                 <%= data.memo %> 
               <% end %>
@@ -47,6 +47,7 @@
               <%= content_tag(:span, class:"col-1 mo_span3") do %>
                 D
               <% end %>
+              
             <% end %>
           <% end %>
           
@@ -57,7 +58,9 @@
             <% end %>
             <%= content_tag :textarea, name: "memo", class: "form-control", id:"recipient-name"  do %>
             <% end %>
+            <%= record.file_field :image %>
           <% end %>
+          
           
           <!--모달창에 업로드된 이미지 불러오기 -->
           <%= content_tag(:div, class:"form-group row") do %>
@@ -65,12 +68,13 @@
               photos
             <% end %>
               <% modal_image_count = 1 %>
-            <% @cal_record2.each do |data| %>
+            <% @user_record_data.each do |data| %>
               <% modal_image_css = modal_image_count % 3 %>
               <%= image_tag("#{data.image_url}", class: "col-4 modal_image#{modal_image_css}", alt: "index test") %>
               <% modal_image_count = modal_image_count + 1 %>
             <% end %>
           <% end %>
+          
         <% end %>
         <%= content_tag(:div, class:"modal-footer") do %>
           
@@ -79,6 +83,7 @@
             ClOSE
           <% end %>
           <%= record.submit 'ADD', class: "btn btn-primary" %>
+          
         <% end %>
       <% end %>
     <% end %>
