--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -70,7 +70,7 @@
               <% modal_image_count = 1 %>
             <% @user_record_data.each do |data| %>
               <% modal_image_css = modal_image_count % 3 %>
-              <%= image_tag("#{data.image}", class: "col-4 modal_image#{modal_image_css}", alt: "index test") %>
+              <%= image_tag("#{data.image_url}", class: "col-4 modal_image#{modal_image_css}", alt: "index test") %>
               <% modal_image_count = modal_image_count + 1 %>
             <% end %>
           <% end %>
