--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -31,8 +31,8 @@
             <%= content_tag(:label, for: "messgae-text", class:"col-form-label col-12") do %>
               saved records
             <% end %>
-            <% @cal_record2 =  @cal_record.where(date_id: @date_id)%>
-            <% @cal_record2.each do |data| %>
+            <% @user_record_data =  @user_record.where(date_id: @date_id)%>
+            <% @user_record_data.each do |data| %>
               <%= content_tag(:span, class:"col-7 mo_span1") do %>
                 <%= data.memo %> 
               <% end %>
@@ -57,6 +57,7 @@
             <% end %>
             <%= content_tag :textarea, name: "memo", class: "form-control", id:"recipient-name"  do %>
             <% end %>
+            <%= record.file_field :image %>
           <% end %>
           
           <!--모달창에 업로드된 이미지 불러오기 -->
@@ -65,9 +66,9 @@
               photos
             <% end %>
               <% modal_image_count = 1 %>
-            <% @cal_record2.each do |data| %>
+            <% @user_record_data.each do |data| %>
               <% modal_image_css = modal_image_count % 3 %>
-              <%= image_tag("#{data.image_url}", class: "col-4 modal_image#{modal_image_css}", alt: "index test") %>
+              <%= image_tag("#{data.image}", class: "col-4 modal_image#{modal_image_css}", alt: "index test") %>
               <% modal_image_count = modal_image_count + 1 %>
             <% end %>
           <% end %>
