--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Record</h1>
+<h3>Editing Record</h1>
 
 <%= render 'form', record: @record %>
 
-<%= link_to 'Show', @record %> |
+<%= link_to 'calendar', calendar_path %> |
 <%= link_to 'Back', records_path %>
