--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', record: @record %>
 
-<%= link_to 'calendar', calendar_path %> |
+<%= link_to 'calendar', calendar_path %>
 <%= link_to 'Back', records_path %>
