--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', record: @record %>
 
 <%= link_to 'calendar', calendar_path %>
-<%= link_to 'Back', records_path %>
+<%= link_to 'Back', calendar_path %>
