issue-#53/insert images in calendar page

--- a/app/assets/stylesheets/closet.scss
+++ b/app/assets/stylesheets/closet.scss
@@ -70,6 +70,11 @@ section.calendar_page.container{
   font-size: 0.8rem;
   font-weight: bold;
 }
+// insert image
+.td_images{
+  width: 2.2vh;
+}
+
 
 // modal 관련
 .modal-title-date{
@@ -105,3 +110,4 @@ section.calendar_page.container{
   padding-left: 0px;
   margin-bottom: 5px;
 }
+
